# iCoExpNet

./: .gitignore  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: publish.yml
NetworkAnalysis/: ExperimentSet.py  GraphToolExp.py  NetworkComp.py
data/: TF_names_v_1.01.txt  test_mutation_data.tsv
data/controls/: control_tf_1.tsv  control_tf_2.tsv  control_tf_3.tsv  control_tf_4.tsv  control_tf_5.tsv
examples/: parallel_playground.py  playground.py
iCoExpNet/: main.py
outputAnalysis/: exampleNB.ipynb
src/iCoExpNet/analysis/: NetworkOutput.py
src/iCoExpNet/analysis/utilities/: helpers.py  markers.py
src/iCoExpNet/examples/: parallel_playground.py  playground.py
src/iCoExpNet/output_analysis/: exampleNB.ipynb
src/icoexpnet/analysis/: NetworkOutput.py
src/icoexpnet/analysis/utilities/: clustering.py  sankey_consensus_plot.py
src/icoexpnet/core/: __init__.py
src/temp_pkg/analysis/: GraphHelper.py
src/temp_pkg/analysis/utilities/: pre_processing.py
