[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icoexpnet"
version = "0.1.1"
description = "iCoExpNet: gene co-expression network construction and analysis"
authors = [{ name = "Vlad V. Ungureanu", email = "vlad.ungureanu@york.ac.uk" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "plotly",
    "matplotlib",
    "scikit-learn",
    "igraph",
    "leidenalg"
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = [
    "icoexpnet",
    "icoexpnet.core",
    "icoexpnet.analysis",
    "icoexpnet.examples",
]

[project.urls]
Homepage = "https://github.com/vladUng/iCoExpNet"
Documentation = "https://github.com/vladUng/iCoExpNet#readme"